# n-orca

./: .gitignore  AGENTS.md  IMPROVEMENT_GOAL.md  LICENSE  README.md  pyproject.toml
.claude/skills/n-orca-build-sae/: SKILL.md
.claude/skills/n-orca-build-world-model/: SKILL.md
.claude/skills/n-orca-compile/: SKILL.md
.claude/skills/n-orca-verify/: SKILL.md
.github/workflows/: ci.yml  publish.yml
docs/: grammar.md  proposed-sae-extensions.md  verification.md
examples/: conv-classifier.n.orca.md  cosmos-mot-denoise-step.mmd  cosmos-mot-denoise-step.n.orca.md  cosmos-mot-reasoner.mmd  cosmos-mot-reasoner.n.orca.md  econ-attn-world-model.mmd  econ-attn-world-model.n.orca.md  econ-deep-world-model.mmd  econ-deep-world-model.n.orca.md  econ-temporal-world-model.mmd  econ-temporal-world-model.n.orca.md  econ-world-model.mmd  econ-world-model.n.orca.md  residual-block.n.orca.md  sae-attn-topk.mmd  sae-attn-topk.n.orca.md  sae-gated.mmd  sae-gated.n.orca.md  sae-jumprelu.mmd  sae-jumprelu.n.orca.md  sae-l1.mmd  sae-l1.n.orca.md  sae-supervised-topk.mmd  sae-supervised-topk.n.orca.md  sae-topk.mmd  sae-topk.n.orca.md  simple-mlp.n.orca.md  tiny-vit.n.orca.md  transformer-block.n.orca.md  unet-stub.n.orca.md
examples/hf-generated/: bert-base-uncased.mmd  bert-base-uncased.n.orca.md  gpt2-small.mmd  gpt2-small.n.orca.md  lewm-pusht.mmd  lewm-pusht.n.orca.md  llama-7b.mmd  llama-7b.n.orca.md  tinyllama-2L.mmd  tinyllama-2L.n.orca.md  vjepa2.mmd  vjepa2.n.orca.md
n_orca/: __init__.py  ast.py  mcp_server.py  render.py  sae.py  world_models.py
n_orca/backends/: __init__.py  capability.py
n_orca/cli/: __init__.py  main.py
n_orca/compiler/: __init__.py  mermaid.py  pytorch.py
n_orca/hf/: __init__.py  client.py  convert.py
n_orca/hf/adapters/: __init__.py  _blocks.py  (+6 more)
n_orca/ops/: __init__.py  spec.py
n_orca/parser/: __init__.py  parser.py
n_orca/verifier/: __init__.py  verifier.py
scripts/: generate_sae_docs.py  generate_sibling_docs.py
tests/: test_backends.py  test_cli.py  test_hf_adapters.py  test_hf_cli.py  test_hf_client.py  test_mcp_server.py  test_mermaid.py  test_ops.py  test_parser.py  test_pytorch.py  test_render.py  test_sae_and_world_models.py  test_verifier.py
(+10 files in other folders)
