[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "n-orca"
version = "0.1.0"
description = "Neural-network Orchestrated Architecture Language — a Markdown DSL for declaring, verifying, visualizing, and executing neural network architectures."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Allan Scott", email = "allan@jallan.scot" },
]
maintainers = [
    { name = "Allan Scott", email = "allan@jallan.scot" },
]
keywords = [
    "neural-networks",
    "dsl",
    "markdown",
    "pytorch",
    "verification",
    "llm",
    "transformer",
    "huggingface",
    "mcp",
    "sparse-autoencoder",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jascal/n-orca"
Repository = "https://github.com/jascal/n-orca"
Issues = "https://github.com/jascal/n-orca/issues"
Changelog = "https://github.com/jascal/n-orca/releases"
Documentation = "https://github.com/jascal/n-orca#readme"

[project.optional-dependencies]
torch = ["torch>=2.0"]
hf = ["huggingface_hub>=0.20"]
mcp = ["mcp>=1.0", "huggingface_hub>=0.20"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
all = ["torch>=2.0", "huggingface_hub>=0.20", "mcp>=1.0", "pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
n-orca = "n_orca.cli.main:main"

[tool.setuptools.packages.find]
include = ["n_orca*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
